change: import new components

--- a/src/styles/global.module.scss
+++ b/src/styles/global.module.scss
@@ -1,1 +1,15 @@
-// define global styles here
+.root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+}
